--- a/QuizMaster/pom.xml
+++ b/QuizMaster/pom.xml
@@ -29,11 +29,11 @@
             <version>21.0.6</version>
         </dependency>
 
-        <!-- BootstrapFX Core -->
+        <!-- AtlantaFx Core -->
         <dependency>
-            <groupId>org.kordamp.bootstrapfx</groupId>
-            <artifactId>bootstrapfx-core</artifactId>
-            <version>0.4.0</version>
+            <groupId>io.github.mkpaz</groupId>
+            <artifactId>atlantafx-base</artifactId>
+            <version>2.1.0</version>
         </dependency>
 
         <!-- Jackson Databind -->
