--- a/QuizMaster/pom.xml
+++ b/QuizMaster/pom.xml
@@ -36,6 +36,13 @@
             <version>2.1.0</version>
         </dependency>
 
+        <!-- Java Time Module -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.20.1</version> <!-- match your jackson-databind version -->
+        </dependency>
+
         <!-- Jackson Databind -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
